examples/test/testpolicy12531.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12531
  namespace: namespace87
spec:
  podSelector:
    matchLabels:
      key46: value14
      key44: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value1
          key49: value44
          key33: value21
      podSelector:
        matchLabels:
          key33: value9
          key6: value33
